After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 627143 - Fix some ref leaks in hook_up_vfunc_implementation()
Fix some ref leaks in hook_up_vfunc_implementation()
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2010-08-17 12:51 UTC by Steve Frécinaux
Modified: 2010-08-18 18:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix some ref leaks in hook_up_vfunc_implementation() (1.41 KB, patch)
2010-08-17 12:51 UTC, Steve Frécinaux
committed Details | Review

Description Steve Frécinaux 2010-08-17 12:51:43 UTC
Some refs to g-i infos are leaked in error cases.
Comment 1 Steve Frécinaux 2010-08-17 12:51:45 UTC
Created attachment 168066 [details] [review]
Fix some ref leaks in hook_up_vfunc_implementation()
Comment 2 Steve Frécinaux 2010-08-18 18:15:52 UTC
Attachment 168066 [details] pushed as ac59c18 - Fix some ref leaks in hook_up_vfunc_implementation()