Fix some ref leaks in hook_up_vfunc_implementation()

https://bugzilla.gnome.org/show_bug.cgi?id=627143